all links and src are updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Fylo Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 <body>
     <nav class="container">
         <div class="logo">
-            <img src="../images/logo.svg">
+            <img src="./images/logo.svg">
         </div>
         <div class="nav-items">
             <div class="nav-item nav-feature-item"><a href="#">Feature</a></div>
@@ -35,25 +35,25 @@
             </form>
         </div>
         <div class="float-right">
-            <img src="../images/illustration-1.svg" alt="Illustration">
+            <img src="./images/illustration-1.svg" alt="Illustration">
         </div>
         
     </section>
-    <img src="../images/bg-curve-desktop.svg" alt="desktop curve">
+    <img src="./images/bg-curve-desktop.svg" alt="desktop curve">
     <div class="main-content" style="min-height: 85vh;">
         <div class="main-left" >
             <h2>Stay productive, where you are</h2>
             <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
             <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
             <span class="see_link">        
-                <a href="#">See how Fylo works</a><img src="../images/icon-arrow.svg" class="inline-img">
+                <a href="#">See how Fylo works</a><img src="./images/icon-arrow.svg" class="inline-img">
             </span>
             <div class="card"  id="me">
-                <img src="../images/icon-quotes.svg" class="icon-quotes">
+                <img src="./images/icon-quotes.svg" class="icon-quotes">
                 <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration</p>
                 
                 <div class="profile-picture">
-                    <img src="../images/Bcsm-f18-208 Usama Yaseen.jpeg" alt="Profile-Picture">
+                    <img src="./images/Bcsm-f18-208 Usama Yaseen.jpeg" alt="Profile-Picture">
                     <div>
                         <h3>Usama Yaseen</h3>
                         <p>Founder & CEO, XYZ</p>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="main-right">
-            <img src="../images/illustration-2.svg" alt="Illustration">
+            <img src="./images/illustration-2.svg" alt="Illustration">
         </div>
     </div>
     <div class="inviting">
@@ -79,14 +79,14 @@
     </div>
     <div class="footer">
         <div class="social-from contact-logo" style="margin-left: 20px;">
-            <img src="../images/big-logo.svg" style="height: 50px;">
+            <img src="./images/big-logo.svg" style="height: 50px;">
             <div class="contact">
                 <div style="display: flex;">
-                    <img src="../images/icon-phone.svg" alt="icon-phone" style="margin-right: 12px;">
+                    <img src="./images/icon-phone.svg" alt="icon-phone" style="margin-right: 12px;">
                     <p>Phone: +92306 7634765</p>
                 </div>
                 <div style="display: flex;">
-                    <img src="../images/icon-email.svg" alt="icon-email" style="margin-right: 12px;">
+                    <img src="./images/icon-email.svg" alt="icon-email" style="margin-right: 12px;">
                     <p>osamayaseenlakhan@gmail.com</p>
                 </div>
             </div>
@@ -111,6 +111,6 @@
     <div class="copyright">
         <p>Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>. Coded by <a href="#me">Usama Yaseen</a>.</p>
     </div>
-    <script src="../js/"></script>
+    <script src="./js/"></script>
 </body>
 </html>
