Upload On Website

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <div><a href="#">Terms</a></div>
             <div><a href="#">Privacy</a></div>
         </div>
-        <div class="social-from footer__social">
-            <a class="footer__social-icon" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a class="footer__social-icon" href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a class="footer__social-icon" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+        <div class="social-from footer__social" id="Social-icon">
+            <a class="footer__social-icon" href="#Social-icon"><i class="fa fa-facebook"></i></a>
+            <a class="footer__social-icon" href="#Social-icon"><i class="fa fa-twitter"></i></a>
+            <a class="footer__social-icon" href="#Social-icon"><i class="fa fa-instagram"></i></a>
         </div>
     </div>
     <div class="copyright">
