Completed Final Version

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>All your files in one secure location, accessible anywhere.</h2>
             <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
             <form class="mail-form">
-                <input type="email" class="signin-form__input" placeholder="Enter your mail...">
+                <input type="email" class="signin-form__input" placeholder="Enter your mail..." required>
                 <input type="submit" value="Get Started">
             </form>
         </div>
